{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 29,
  "lineage": "1eb41407-82dc-5b39-a334-c248b226b71b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fef75528cf8c027",
            "arn": "arn:aws:ec2:us-east-1:975050320630:elastic-ip/eipalloc-04fef75528cf8c027",
            "association_id": "eipassoc-0df90b3b00af2ccb0",
            "domain": "vpc",
            "id": "eipalloc-04fef75528cf8c027",
            "instance": "i-0304a06dd24d6ccbe",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d494d16b685e03d9",
            "private_dns": "ip-10-0-1-213.ec2.internal",
            "private_ip": "10.0.1.213",
            "public_dns": "ec2-54-87-212-121.compute-1.amazonaws.com",
            "public_ip": "54.87.212.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "task-eip"
            },
            "tags_all": {
              "Name": "task-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.task-instance",
            "aws_security_group.task-SG",
            "aws_subnet.task-subnet",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "task-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:975050320630:instance/i-0304a06dd24d6ccbe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0304a06dd24d6ccbe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "loadbalancer",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aef97eb9424514ee",
            "private_dns": "ip-10-0-1-155.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.155",
            "public_ip": "54.198.31.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e83fd7b0b6f68113",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0487f8dd6d33ab5ff",
            "tags": {
              "Name": "Task-instance"
            },
            "tags_all": {
              "Name": "Task-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-097367196ca6c6125"
            ]
          },
          "dependencies": [
            "aws_security_group.task-SG",
            "aws_subnet.task-subnet",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "task-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050320630:internet-gateway/igw-039671b39b3ae7599",
            "id": "igw-039671b39b3ae7599",
            "owner_id": "975050320630",
            "tags": {
              "Name": "Task-IG"
            },
            "tags_all": {
              "Name": "Task-IG"
            },
            "vpc_id": "vpc-0d451c16d4598655b"
          },
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "task-NI",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050320630:network-interface/eni-0d494d16b685e03d9",
            "attachment": [
              {
                "attachment_id": "eni-attach-0a5ae68f0dd1bd8f5",
                "device_index": 1,
                "instance": "i-0304a06dd24d6ccbe"
              }
            ],
            "id": "eni-0d494d16b685e03d9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:9b:3c:8a:df:e7",
            "owner_id": "975050320630",
            "private_ip": "10.0.1.213",
            "private_ip_list": [
              "10.0.1.213"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.213"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-097367196ca6c6125"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0487f8dd6d33ab5ff",
            "tags": {
              "Name": "Task-NI"
            },
            "tags_all": {
              "Name": "Task-NI"
            }
          },
          "dependencies": [
            "aws_instance.task-instance",
            "aws_security_group.task-SG",
            "aws_subnet.task-subnet",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "task-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050320630:route-table/rtb-09c616752d1142d32",
            "id": "rtb-09c616752d1142d32",
            "owner_id": "975050320630",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039671b39b3ae7599",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Task-RT"
            },
            "tags_all": {
              "Name": "Task-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d451c16d4598655b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.task-IG",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d01a89417f9975b",
            "route_table_id": "rtb-09c616752d1142d32",
            "subnet_id": "subnet-0487f8dd6d33ab5ff"
          },
          "dependencies": [
            "aws_internet_gateway.task-IG",
            "aws_route_table.task-RT",
            "aws_subnet.task-subnet",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050320630:security-group/sg-097367196ca6c6125",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097367196ca6c6125",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240605101641033600000001",
            "name_prefix": "terraform-",
            "owner_id": "975050320630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Task-SG"
            },
            "tags_all": {
              "Name": "Task-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d451c16d4598655b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050320630:subnet/subnet-0487f8dd6d33ab5ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0487f8dd6d33ab5ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050320630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Task-subnet"
            },
            "tags_all": {
              "Name": "Task-subnet"
            },
            "vpc_id": "vpc-0d451c16d4598655b"
          },
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050320630:vpc/vpc-0d451c16d4598655b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-012527113d5685210",
            "default_route_table_id": "rtb-0b2062ac02419934f",
            "default_security_group_id": "sg-0dde67278fdec447c",
            "dhcp_options_id": "dopt-038f3e8b37eb66b3f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d451c16d4598655b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2062ac02419934f",
            "owner_id": "975050320630",
            "tags": {
              "Name": "Task-terraform"
            },
            "tags_all": {
              "Name": "Task-terraform"
            }
          }
        }
      ]
    }
  ]
}